# holocure-example-mod

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sh  get_dll_version.sh  manifest.json  setup_vs.bat  update_compile_commands.sh
.github/workflows/: build.yml
Src/: CMakeLists.txt  DllMain.cpp
Src/Features/API/: Internal.hpp
Src/Hooks/MessageBoxW/: MessageBoxW.hpp
Src/Hooks/WindowProc/: WindowProc.hpp
Src/Hooks/YYError/: YYError.hpp
Src/SDK/Plugins/: Plugins.hpp
Src/SDK/Plugins/API Definitions/: APIDefs.cpp
Src/SDK/Plugins/YYTKEvent/: YYTKEvent.hpp
Src/Utils/Logging/: Logging.cpp
Src/Utils/PE Parser/: PEParser.hpp
Src/Utils/WinAPI/: WinAPI.hpp
include/Aurie/: shared.hpp
include/YYToolkit/: Shared.cpp  Shared.hpp
